--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 .head1{
     background-color: rgb(182, 109, 20);
+    background-image: url(images/img-bg2.jpg);
+    background-repeat: no-repeat;
+    background-position: top left;
+    background-size:cover;
+    box-shadow: 1px 1px 2px #e5f068;
 }
-.head1 h1{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
+.head1 h1,p{
+    font-family: 'Bricolage Grotesque', sans-serif;
+    text-shadow: 1px 1px 2px #000;    
 }
